# mirai

./: .gitignore  index.html  package.json  tailwind.config.js
src/: app.vue  main.js  routes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: anilistAPI.js
src/api/mutations/: DeleteMediaListEntry.js  SaveMediaListEntry.js
src/api/queries/: Media.js  MediaListCollection.js  MediaSearch.js  MediaSeason.js  Viewer.js
src/components/: DynamicIcon.vue
src/components/Navigation/: NavItem.vue  SideNav.vue
src/pages/about/: about-us-page.vue
src/pages/home/: home-page.vue
src/pages/search/: search-page.vue
src/plugins/: configure-ynetwork.js
